--- a/usr.sbin/ldapctl/Makefile
+++ b/usr.sbin/ldapctl/Makefile
@@ -1,13 +1,14 @@
-#	$OpenBSD$
+#	$OpenBSD: Makefile,v 1.1 2010/05/31 17:36:31 martinh Exp $
 
 .PATH:		${.CURDIR}/../ldapd
 
 PROG=		ldapctl
 MAN=		ldapctl.8
-SRCS=		ldapctl.c
+SRCS=		ldapctl.c parse.y btree.c log.c ber.c util.c \
+		index.c attributes.c
 
-LDADD=		-levent -lutil
-DPADD=		${LIBEVENT} ${LIBUTIL}
+LDADD=		-levent -lcrypto -lz -lutil
+DPADD=		${LIBEVENT} ${LIBCRYPTO} ${LIBZ} ${LIBUTIL}
 CFLAGS+=	-I${.CURDIR}/../ldapd
 CFLAGS+=	-Wall -Wstrict-prototypes -Wmissing-prototypes
 CFLAGS+=	-Wmissing-declarations
