--- a/usr.sbin/ldapctl/Makefile
+++ b/usr.sbin/ldapctl/Makefile
@@ -1,11 +1,11 @@
-#	$OpenBSD: Makefile,v 1.1 2010/05/31 17:36:31 martinh Exp $
+#	$OpenBSD: Makefile,v 1.2 2010/06/23 13:31:30 martinh Exp $
 
 .PATH:		${.CURDIR}/../ldapd
 
 PROG=		ldapctl
 MAN=		ldapctl.8
 SRCS=		ldapctl.c parse.y btree.c log.c ber.c util.c \
-		index.c attributes.c
+		index.c attributes.c schema.c
 
 LDADD=		-levent -lcrypto -lz -lutil
 DPADD=		${LIBEVENT} ${LIBCRYPTO} ${LIBZ} ${LIBUTIL}
