--- a/usr.sbin/ifstated/Makefile
+++ b/usr.sbin/ifstated/Makefile
@@ -1,10 +1,10 @@
-#	$OpenBSD: Makefile,v 1.8 2006/11/26 11:31:13 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.9 2007/10/25 06:03:31 pyr Exp $
 
 PROG=	ifstated
 SRCS=	ifstated.c log.c parse.y
 CFLAGS+= -Wall -I${.CURDIR}
 CFLAGS+= -Wstrict-prototypes -Wmissing-prototypes
-CFLAGS+= -Wmissing-declarations -Wredundant-decls
+CFLAGS+= -Wmissing-declarations
 CFLAGS+= -Wshadow -Wpointer-arith -Wcast-qual
 YFLAGS=
 MAN= ifstated.8 ifstated.conf.5
