--- a/usr.sbin/iscsid/Makefile
+++ b/usr.sbin/iscsid/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile,v 1.1 2010/09/24 09:43:19 claudio Exp $
+#	$OpenBSD: Makefile,v 1.2 2010/09/24 10:53:14 dlg Exp $
 
 PROG=	iscsid
-SRCS=	connection.c control.c initiator.c iscsid.c log.c pdu.c task.c \
-	util.c vscsi.c
+SRCS=	connection.c control.c initiator.c iscsid.c log.c pdu.c session.c \
+	task.c util.c vscsi.c
 
 MAN=	iscsid.8
 
