--- a/bin/date/Makefile
+++ b/bin/date/Makefile
@@ -1,7 +1,7 @@
-#	$OpenBSD: Makefile,v 1.2 1996/06/23 14:19:42 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.3 1997/09/21 11:34:52 deraadt Exp $
 
 PROG=	date
-SRCS=	date.c netdate.c
+SRCS=	date.c
 DPADD+=	${LIBUTIL}
 LDADD+=	-lutil
 
